update doc api
